// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete should delete all the entities: should delete all 1`] = `
Object {
  "entities": Object {},
  "ids": Array [],
}
`;

exports[`delete should delete all the entities: should have three entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`delete should delete by predicate: should delete the entity with id of 1 1`] = `
Object {
  "entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "ids": Array [
    2,
    3,
  ],
}
`;

exports[`delete should delete by predicate: should have three entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`delete should delete entities: should delete two entities 1`] = `
Object {
  "entities": Object {
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "ids": Array [
    3,
  ],
}
`;

exports[`delete should delete entities: should have three entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
    "3": Object {
      "completed": false,
      "id": 3,
      "title": "todo 3",
    },
  },
  "ids": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`delete should delete entity: should delete one entity 1`] = `
Object {
  "entities": Object {
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    2,
  ],
}
`;

exports[`delete should delete entity: should have two entities 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
    "2": Object {
      "completed": false,
      "id": 2,
      "title": "todo 2",
    },
  },
  "ids": Array [
    1,
    2,
  ],
}
`;

exports[`delete should work with ref: should delete the ui entity with id of 1 1`] = `
Object {
  "UIEntities": Object {
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    2,
  ],
}
`;

exports[`delete should work with ref: should have three ui entities 1`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
    "2": Object {
      "id": 2,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
    2,
  ],
}
`;
